# ipp_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
include/: ipp_cpp.hpp
test/: CMakeLists.txt  test.cpp
